  * Calendar now groups stickies together by their tags
  * Layout of search filters on sticky page cleaned up
  * Items on template index are now aligned across various templates

* Bug Fix
  * Minor table GUI fix when expanding a sticky
  * Templates page is now sortable by name
  * Searching and filtering is now possible in the groups list view
  * Tags can now be cleared when updating a sticky

* Refactoring
  * Removed unused sticky attributes sticky type, sticky position, and sticky parent

== 0.14.1

* Bug Fix
  * Use update_column instead of update_attribute to avoid emails being sent out during a migration

== 0.14.0

* Enhancements
  * Stickies no longer have status of 'planned', 'ongoing', 'completed', and now are either completed or not completed
    * NOTE: Stickies can have tags added to them on a per project basis if more fine-grained labeling is required
  * Sticky edit page now contains:
    * Group description if the sticky is part of a group
    * Comments that may have been added to sticky
  * Stickies on the sticky list page:
    * Can now be filtered by:
      * Project
      * Assigned To
      * Due Date
      * Status
    * Display the total count of filtered stickies
    * Contain a link to the group if grouped with other stickies
  * Template show page has been improved
    * Items listed in a template are now sorted by their offset from the initial due date
    * Items are now displayed more succinctly
  * Using Rails 3.2.0.rc2 and Contour 0.8.1
  * Calendar updated have consistent look across browsers and operating systems
  * Templates can now have default sticky tags assigned to each item
  * Projects emails can now be fine-tuned to receive only certain types of updates on a per-project basis

* Refactoring
  * qTip2 is now provided by Contour 0.8.1

== 0.13.0

* Enhancements
  * Calendar Improvements
    * Double clicking on calendar allows creation of a sticky or a sticky group