@@ -1,0 +1,1 @@
+$('#sticky_calendar_form').submit();
