@@ -40,3 +40,13 @@ ongoing:
   start_date: 2011-12-19
   end_date: 2012-12-18
   deleted: false
+
+hidden:
+  user: valid
+  position: 1
+  name: HiddenProject
+  status: MyString
+  description: This project is set as hidden for the valid user
+  start_date: 2011-02-24
+  end_date: 2011-02-24
+  deleted: false
