@@ -7,6 +7,7 @@ valid:
   deleted: false
   system_admin: false
   # email_notifications: {}
+  hidden_project_ids: [<%= ActiveRecord::Fixtures.identify(:hidden) %>]
   users_per_page: 10
   email: valid@example.com
   encrypted_password: MyString
